--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "test": "echo \"No tests\" && exit 0"
   },
   "dependencies": {
-    "firebase": "^9.22.0",
+    "@heroicons/react": "^2.2.0",
+    "firebase": "^9.23.0",
     "next": "13.4.12",
-    "qrcode.react": "^1.0.1",
+    "qrcode.react": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
