--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-qr-code": "^2.0.15"
+    "react-qr-code": "^2.0.15",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
