--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "resend": "^4.6.0"
   },
   "devDependencies": {
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.8.3"
   }
 }
