--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "server": "node server.js",
     "test": "echo \"No tests\" && exit 0"
   },
   "dependencies": {
@@ -17,7 +18,9 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-qr-code": "^2.0.15",
-    "resend": "^4.6.0"
+    "resend": "^4.6.0",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
