--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-qr-code": "^2.0.15",
     "resend": "^4.6.0",
-    "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
