--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start",
     "server": "node server.js",
-    "test": "echo \"No tests\" && exit 0"
+    "test": "jest"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "express": "^4.19.2",
     "firebase": "^9.23.0",
     "next": "13.4.12",
     "qrcode.react": "^4.2.0",
@@ -18,14 +19,15 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-qr-code": "^2.0.15",
-    "resend": "^4.6.0",
-    "express": "^4.19.2"
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "autoprefixer": "^10.4.14",
+    "jest": "^30.0.2",
     "postcss": "^8.4.24",
+    "supertest": "^7.1.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.8.3"
   }
