--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "express": "^4.19.2",
     "firebase": "^9.23.0",
+    "handlebars": "^4.7.8",
     "next": "13.4.12",
     "qrcode.react": "^4.2.0",
     "react": "18.2.0",
