--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
 BASE_URL=
 RESEND_API_KEY=
+OPENAI_API_KEY= # your OpenAI API key
