--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "express": "^4.19.2",
-    "firebase": "^9.23.0",
-    "next": "13.4.12",
+    "firebase": "^11.9.1",
+    "next": "^14.2.30",
     "qrcode.react": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
