--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "server": "node server.js",
-    "test": "jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -24,9 +24,12 @@
     "resend": "^4.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/preset-env": "^7.27.2",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "autoprefixer": "^10.4.14",
+    "babel-jest": "^30.0.2",
     "jest": "^30.0.2",
     "postcss": "^8.4.24",
     "supertest": "^7.1.1",
