--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.21.5",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "autoprefixer": "^10.4.14",
     "babel-jest": "^30.0.2",
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.3.2",
     "jest": "^30.0.2",
     "postcss": "^8.4.24",
     "supertest": "^7.1.1",
