--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,9 @@
     },
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "types": ["jest", "node"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "firebase/functions"]
 }
