Remove ts-nocheck directives and fix types

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mapbox/mapbox-sdk": "^0.16.1",
     "express": "^4.19.2",
     "firebase": "^9.23.0",
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.3.2",
     "handlebars": "^4.7.8",
     "mapbox-gl": "^3.13.0",
     "next": "13.4.12",
