--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCNBCnQYJAykquj_bVcXOdKfeU0So3Depc
+NEXT_PUBLIC_FIREBASE_API_KEY= # your Firebase API key
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
