--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,15 @@
 {
   "name": "functions",
   "main": "index.js",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
     "firebase-functions": "^4.3.0",
     "firebase-admin": "^11.10.1",
-    "resend": "^0.3.0"
+    "resend": "^4.6.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
